--- a/JsonMVC/JsonMVC.Web/Views/Shared/_Layout.cshtml
+++ b/JsonMVC/JsonMVC.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Usuario", "TestandoJson", "Index")</li>
+                    <li>@Html.ActionLink("Usuario", "Index", "TestandoJson")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
