validação de tabela e criar json

--- a/JsonMVC/JsonMVC.Web/Content/Site.css
+++ b/JsonMVC/JsonMVC.Web/Content/Site.css
@@ -22,3 +22,9 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.font-table {
+    font-size: 12px;
+    font-family: serif;
+    color: #4682B4;
+}
