--- a/JsonMVC/JsonMVC.Web/Views/Usuario/Index.cshtml
+++ b/JsonMVC/JsonMVC.Web/Views/Usuario/Index.cshtml
@@ -6,7 +6,7 @@
 }
 <h2>Cadastro de Usuarios</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(null,null, FormMethod.Post, new {id = "formuser"}))
 {
     @Html.AntiForgeryToken()
 
@@ -114,20 +114,38 @@
     </div>
 
     <!-- Modal-content -->
-
-    <div id="myModal" class="modal fade">
-        <div class="modal-dialog">
+    <div class="modal fade" id="modalErro" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="titleModal"></h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i>Atenção</h4>
                 </div>
                 <div class="modal-body">
-                    <p id="msgModal"></p>
+                    <div class="alert alert-danger" role="alert">
+                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                        <h4><span class="sr-only">Erro:</span></h4>
+                        <h4>
+                            <div id="lblErro"></div>
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="modalInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close InfoModalClose" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="modalInfoLabel"><i class="fa fa-info-circle" aria-hidden="true"></i>Informação</h4>
+                </div>
+                <div class="modal-body">
+                    <div id="lblInformation"></div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    @*<button type="button" class="btn btn-primary">Save changes</button>*@
+                    <button type="button" class="btn btn-default InfoModalClose" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
