--- a/JsonMVC/JsonMVC.Web/Views/Login/Index.cshtml
+++ b/JsonMVC/JsonMVC.Web/Views/Login/Index.cshtml
@@ -10,125 +10,139 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <style type="text/css">
-        body .login, body .login h3  {
-	        font-family: 'Open Sans', sans-serif;
+        body .login, body .login h3 {
+            font-family: 'Open Sans', sans-serif;
         }
-        
+
         .login {
-	        width: 100%;
-	        position: absolute;
-	        top: 0;
-	        left: 0;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
-        .login>.container{
-	        position: relative;
-        }
-        
+
+            .login > .container {
+                position: relative;
+            }
+
         .boxLogin {
-	        width: 100%;
-	        min-height: 450px;
-	        background-color: #fff;
-	        border-radius: 8px 8px 0 0;
-	        margin-top: 70px;
-	        max-width: 526px;
-	        margin-left: auto;
-	        margin-right: auto;
-	        padding: 25px 40px;
+            width: 100%;
+            min-height: 450px;
+            background-color: #fff;
+            border-radius: 8px 8px 0 0;
+            margin-top: 70px;
+            max-width: 526px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 25px 40px;
         }
-        .boxLogin h3 {
-	        text-align: center;
-	        margin-bottom: 40px;
-        }
+
+            .boxLogin h3 {
+                text-align: center;
+                margin-bottom: 40px;
+            }
+
         .boxLoginShadow {
-	        max-width: 526px;
-	        margin-left: auto;
-	        margin-right: auto;
+            max-width: 526px;
+            margin-left: auto;
+            margin-right: auto;
         }
+
         .footer {
-	        background-color: #B5B5B5;
-	        height: 44px;
-	        margin-top: 30px;
+            background-color: #B5B5B5;
+            height: 44px;
+            margin-top: 30px;
         }
+
         .login .form-control {
-	        height: 45px;
-	        border-radius: 0;
+            height: 45px;
+            border-radius: 0;
         }
 
         .login .input-group-addon {
-	        border-radius: 0;
-	        background-color: #fff;
-	        padding: 0;
+            border-radius: 0;
+            background-color: #fff;
+            padding: 0;
         }
+
         .login .form-group {
-	        margin-bottom: 20px;
+            margin-bottom: 20px;
         }
 
         .login .btn-pearson {
-	        border-radius: 0;
-	        width: 100%;
-	        font-size: 18px;
-	        font-weight: 700;
-	        color: #fff;
-	        border: 0;
-	        background-color: #364294;
-	        padding: 25px 12px;
+            border-radius: 0;
+            width: 100%;
+            font-size: 18px;
+            font-weight: 700;
+            color: #fff;
+            border: 0;
+            background-color: #364294;
+            padding: 25px 12px;
         }
-        .login.btn-pearson:focus,
-        .login .btn-pearson:hover
-        {
-	        background-color: #424FAB;
-	        color: #fff;
-        }
+
+            .login.btn-pearson:focus,
+            .login .btn-pearson:hover {
+                background-color: #424FAB;
+                color: #fff;
+            }
+
         .login .squaredThree {
-	        position: relative;
+            position: relative;
         }
-        .login .squaredThree label {
-	        width: 25px;
-	        height: 25px;
-	        cursor: pointer;
-	        position: absolute;
-	        top: 0;
-	        left: 0;
-	        border-radius: 0;
-	        border: 1px solid #ccc;
-        }
-        .login .squaredThree label:after {
-	        content: '';
-	        width: 14px;
-	        height: 7px;
-	        position: absolute;
-	        top: 6px;
-	        left: 5px;
-	        border: 3px solid #000;
-	        border-top: none;
-	        border-right: none;
-	        background: transparent;
-	        opacity: 0;
-	        -webkit-transform: rotate(-45deg);
-	        -ms-transform: rotate(-45deg);
-	        transform: rotate(-45deg);
-        }
-        .login .squaredThree label:hover::after {
-	        opacity: 0.3;
-        }
-        .login .squaredThree input[type=checkbox] {
-	        visibility: hidden;
-        }
-        .login .squaredThree input[type=checkbox]:checked + label:after {
-	        opacity: 1;
-        }
+
+            .login .squaredThree label {
+                width: 25px;
+                height: 25px;
+                cursor: pointer;
+                position: absolute;
+                top: 0;
+                left: 0;
+                border-radius: 0;
+                border: 1px solid #ccc;
+            }
+
+                .login .squaredThree label:after {
+                    content: '';
+                    width: 14px;
+                    height: 7px;
+                    position: absolute;
+                    top: 6px;
+                    left: 5px;
+                    border: 3px solid #000;
+                    border-top: none;
+                    border-right: none;
+                    background: transparent;
+                    opacity: 0;
+                    -webkit-transform: rotate(-45deg);
+                    -ms-transform: rotate(-45deg);
+                    transform: rotate(-45deg);
+                }
+
+                .login .squaredThree label:hover::after {
+                    opacity: 0.3;
+                }
+
+            .login .squaredThree input[type=checkbox] {
+                visibility: hidden;
+            }
+
+                .login .squaredThree input[type=checkbox]:checked + label:after {
+                    opacity: 1;
+                }
+
         .login .fontBoxLogin {
-	        font-size: 12px;
-	        font-weight: 400;
-	        color: #364294;
-	        text-decoration: none;
+            font-size: 12px;
+            font-weight: 400;
+            color: #364294;
+            text-decoration: none;
         }
+
         .login a.fontBoxLogin:hover {
-	        text-decoration: none;
+            text-decoration: none;
         }
 
         .login .remember-password {
-	        margin-left: 15px;
+            margin-left: 15px;
         }
     </style>
 </head>
@@ -145,7 +159,7 @@
                                 <span class="input-group-addon">
                                     <img src="~/Content/img/icoLogin.png" alt="">
                                 </span>
-                                <input name="TxtUser" type="text" id="TxtUser" tabindex="1" class="form-control" placeholder="Usuário"/>
+                                <input name="TxtUser" type="text" id="TxtUser" tabindex="1" class="form-control" placeholder="Usuário" />
                             </div>
                         </div>
 
@@ -155,7 +169,7 @@
                                 <span class="input-group-addon">
                                     <img src="~/Content/img/icoPass.png" alt="">
                                 </span>
-                                <input name="TxtPassword" type="password" id="TxtPassword" tabindex="2" class="form-control" placeholder="Senha"/>
+                                <input name="TxtPassword" type="password" id="TxtPassword" tabindex="2" class="form-control" placeholder="Senha" />
 
                             </div>
                         </div>
@@ -165,7 +179,7 @@
                                 <!-- Remember? -->
                                 <section>
                                     <div class="squaredThree">
-                                        <input id="ChkRemember" type="checkbox" name="ChkRemember" tabindex="3"/>
+                                        <input id="ChkRemember" type="checkbox" name="ChkRemember" tabindex="3" />
                                         <label for="ChkRemember"></label>
                                         <a href="#" class="fontBoxLogin remember-password">
                                             Lembrar senha
@@ -174,7 +188,7 @@
                                 </section>
                             </div>
                             <div class="col-xs-6">
-                                <input class="btn btn-pearson" id="BtnSignIn" name="BtnSignIn" tabindex="4" type="submit" value="ENTRAR"/>
+                                <input class="btn btn-pearson" id="BtnSignIn" name="BtnSignIn" tabindex="4" type="submit" value="ENTRAR" />
                             </div>
                         </div>
                         <div class="row" style="margin-top: 25px;">
@@ -202,21 +216,20 @@
             </div>
         </div>
 
-            <div class="container-fluid footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <p>@DateTime.Now.Year - Json - MVC</p>
-                        </div>
-                        <div class="col-xs-6 text-right">
-                            <p>LCJ Developer & Consulting</p>
-                        </div>
+        <div class="container-fluid footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <p>@DateTime.Now.Year - Json - MVC</p>
                     </div>
-
+                    <div class="col-xs-6 text-right">
+                        <p>LCJ Developer & Consulting</p>
+                    </div>
                 </div>
+
             </div>
-            <footer></footer>
         </div>
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
 </body>
