script para tela de login

--- a/JsonMVC/JsonMVC.Web/Views/Login/Index.cshtml
+++ b/JsonMVC/JsonMVC.Web/Views/Login/Index.cshtml
@@ -4,78 +4,119 @@
 
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link rel="shortcut icon" href="~/favicon.ico" />
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Styles.Render("~/Content/login")
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>@ViewBag.Title - My ASP.NET Application</title>
+	<link rel="shortcut icon" href="~/favicon.ico" />
+	@Styles.Render("~/Content/css")
+	@Scripts.Render("~/bundles/modernizr")
+	@Styles.Render("~/Content/login")
+	<style type="text/css">
+		.link {
+			cursor: pointer;
+		}
+	</style>
 </head>
 <body>
-    <div class="login">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
-                    <div class="boxLogin animated rollIn">
-                        <h3>LOGIN</h3>
-                        <!-- UserName -->
-                        <div class="form-group animated bounce">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <img src="~/Content/img/icoLogin.png" alt="">
-                                </span>
-                                <input name="TxtUser" type="text" id="TxtUser" tabindex="1" class="form-control" placeholder="Usuário" />
-                            </div>
-                        </div>
+	<div class="login">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+					<div class="boxLogin animated rollIn">
+						<h3>CREDENCIAR</h3>
+						<!-- UserName -->
+						<div class="form-group animated bounce">
+							<div class="input-group">
+								<span class="input-group-addon">
+									<img src="~/Content/img/icoLogin.png" alt="">
+								</span>
+								<input name="TxtUser" type="text" id="TxtUser" tabindex="1" class="form-control" placeholder="Usuário" />
+							</div>
+						</div>
 
-                        <!-- Password -->
-                        <div class="form-group animated bounce">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <img src="~/Content/img/icoPass.png" alt="">
-                                </span>
-                                <input name="TxtPassword" type="password" id="TxtPassword" tabindex="2" class="form-control" placeholder="Senha" />
-                            </div>
-                        </div>
+						<!-- Password -->
+						<div class="form-group animated bounce">
+							<div class="input-group">
+								<span class="input-group-addon">
+									<img src="~/Content/img/icoPass.png" alt="">
+								</span>
+								<input name="TxtPassword" type="password" id="TxtPassword" tabindex="2" class="form-control" placeholder="Senha" />
+							</div>
+						</div>
 
-                        <div class="row animated bounce">
-                            <div class="col-xs-6">
-                                <!-- Remember? -->
-                                <section>
-                                    <div class="squaredThree">
-                                        <input id="ChkRemember" type="checkbox" name="ChkRemember" tabindex="3" />
-                                        <label for="ChkRemember"></label>
-                                        <a href="#" class="fontBoxLogin remember-password">
-                                            Lembrar senha
-                                        </a>
-                                    </div>
-                                </section>
-                            </div>
-                            <div class="col-xs-6">
-                                <input class="btn btn-lcj" id="BtnSignIn" name="BtnSignIn" tabindex="4" type="submit" value="ENTRAR" />
-                            </div>
-                        </div>
+						<div class="row animated bounce">
+							<div class="col-xs-6">
+								<!-- Remember? -->
+								<section>
+									<div class="squaredThree">
+										<input id="ChkRemember" type="checkbox" name="ChkRemember" tabindex="3" />
+										<label for="ChkRemember"></label>
+										<a href="#" class="fontBoxLogin remember-password">
+											Lembrar senha
+										</a>
+									</div>
+								</section>
+							</div>
+							<div class="col-xs-6">
+								<input class="btn btn-lcj" id="BtnSignIn" name="BtnSignIn" tabindex="4" type="submit" value="ENTRAR" />
+							</div>
+						</div>
 
-                        <div class="row animated bounce" style="margin-top: 25px;">
-                            <div class="col-xs-12">
-                                <p>
-                                    <!-- Lost Password -->
-                                    <a class="fontBoxLogin" data-target="#ModalLostPassword" data-toggle="modal" id="BtnForgotPassword" tabindex="5">Esqueci minha senha</a>
-                                </p>
-                                <p>
-                                    <!-- First Access -->
-                                    <a class="fontBoxLogin" data-target="#ModalFirstAcess" data-toggle="modal" id="BtnFirstAccess" tabindex="6">Primeiro acesso? Clique aqui</a>
-                                </p>
-                            </div>
-                        </div>
+						<div class="row animated bounce" style="margin-top: 25px;">
+							<div class="col-xs-12">
+								<p>
+									<!-- Lost Password -->
+									<a class="fontBoxLogin link" data-target="#ModalLostPassword" data-toggle="modal" id="BtnForgotPassword" tabindex="5">Esqueci minha senha</a>
+								</p>
+								<p>
+									<!-- First Access -->
+									<a class="fontBoxLogin link" data-target="#ModalFirstAcess" data-toggle="modal" id="BtnFirstAccess" tabindex="6">Primeiro acesso? Clique aqui</a>
+								</p>
+							</div>
+						</div>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!--Modal Informativo Start-->
+	<div class="modal fade" id="modalInfo" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close InfoModalClose" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="modalInfoLabel"><i class="fa fa-info-circle" aria-hidden="true"></i>Informação</h4>
+				</div>
+				<div class="modal-body">
+					<div id="lblInformation">
+						<p></p>
+						<div class="row">
+							<div class="panel-body">
+								@*<div class="position-center">*@
+									<form class="form-inline" role="form">
+										<div class="form-group">
+											<div class="col-sm-8">
+												<input type="email" class="form-control round-input" id="exampleInputEmail2" placeholder="Enter email">
+											</div>
+											<div class="col-sm-4">
+												<button type="submit" class="btn btn-success">Enviar</button>
+											</div>
+										</div>
+									</form>
+								@*</div>*@
+							</div>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-round btn-primary InfoModalClose" data-dismiss="modal">Fechar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--Modal Informativo End-->
+			@Scripts.Render("~/bundles/jquery")
+			@Scripts.Render("~/bundles/bootstrap")
+			<script type="text/javascript" src="../../Scripts/login/functionlogin.js"></script>
 </body>
 </html>
