--- a/JsonMVC/JsonMVC.Web/Views/Usuario/Index.cshtml
+++ b/JsonMVC/JsonMVC.Web/Views/Usuario/Index.cshtml
@@ -18,7 +18,7 @@
 					</span>
 				</header>
 				<div class="panel-body">
-					<button class="btn btn-round btn-info" id="btnAdicionar" type="button">Adicionar</button>
+					<button class="btn btn-round btn-info" id="btnAdicionar" type="button"><i class="fa fa-plus"></i>&nbsp;Adicionar</button>
 					<table id="users-table" class="table table-hover table-responsive">
 						<thead>
 							<tr>
@@ -36,7 +36,7 @@
 						</thead>
 						<tbody></tbody>
 					</table>
-					<button class="btn btn-round btn-success" id="btnGravar" type="button">Gravar</button>
+					<button class="btn btn-round btn-success" id="btnGravar" type="button"><i class="fa fa-refresh"></i>&nbsp;Gravar</button>
 				</div>
 			</section>
 		</div>
