--- a/JsonMVC/JsonMVC.Web/Views/Home/Index.cshtml
+++ b/JsonMVC/JsonMVC.Web/Views/Home/Index.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "Home Page";
 }
 
+
+<div id="gauge" style="width: 100px; height: 100px"></div>
+<div id="gauge1" style="width: 100px; height: 100px"></div>
+<div id="gauge2" style="width:100px; height:100px"></div>
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
@@ -16,16 +21,59 @@
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a>
+        </p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a>
+        </p>
     </div>
     <div class="col-md-4">
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a>
+        </p>
     </div>
 </div>
+
+@section scripts
+{
+    <script src="~/Scripts/themebucket/justgage.js"></script>
+    <script src="~/Scripts/themebucket/raphael-2.1.4.min.js"></script>
+    <script>
+        var g5 = new JustGage({
+            id: "gauge",
+            value: 90,
+            min: 0,
+            max: 100,
+            title: "",
+            label: "C#",
+            levelColorsGradient: false
+        });
+
+        var g5 = new JustGage({
+            id: "gauge1",
+            value: 65,
+            min: 0,
+            max: 100,
+            title: "",
+            label: "C#",
+            levelColorsGradient: false
+        });
+
+        var g5 = new JustGage({
+            id: "gauge2",
+            value: 70,
+            min: 0,
+            max: 100,
+            title: "",
+            label: "C#",
+            levelColorsGradient: false
+        });
+    </script>
+}
